css/style.css
:root {
    --main-text-color: #dbdbdb;
    --secondary-text-color: #7c7e84;

    --nav-menu-width: 230px;
    --footer-height: 90px;
    --upgrade-bar-height: 90px;
    --padding-nav-left-menu: 10px;
    --subtitle-font-size: 0.8rem;
}

/* RESET */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

img {
    width: 100%;
    display:block
}

a {
    color: currentColor;
    text-decoration: none;
}

/********** GENERAL */

body {
    font-family: 'Montserrat', sans-serif;
    font-weight: bold;
}

svg {
    width: 25px;
    height: 25px;
    color: currentColor;
}

h2 {
    font-size: 1.5rem;
    margin: 10px 0;
    color: var(--main-text-color);
}

.progress-bar {
    width: 80%;
    height: 4px;
    background-color: rgb(98, 98, 98);
    border-radius: 5px;
    margin: 0 5px;
    position: relative;
}

.small-progress-bar {
    width: 50%;
    height: 4px;
    background-color: rgb(98, 98, 98);
    border-radius: 5px;
    position: relative;
}

.active-progress-bar {
    width: 25%;
    height: 100%;
    background-color: lightgray;
    border-radius: 5px;
    position: relative;
}

/****** HOVER */

button:hover {
    cursor: pointer;
}

.upgrade-button:hover {
    transform: scale(1.1);
}

ul li:hover {
    color: var(--main-text-color);
}

a:hover {
    color: var(--main-text-color);
}

#app-content .row .col .cover:hover .playbutton-hover {
    display: block;
}

#footer .song-preview .artist-name-preview:hover {
    color: var(--main-text-color);
    text-decoration: underline;
}

#footer .song-preview i:hover {
    color: var(--main-text-color);
}

#footer .player-button-container button:hover {
    transform: scale(1.1);
}

.progress-bar:hover .active-progress-bar, 
.small-progress-bar:hover .active-progress-bar {
    background-color: #ADFF2F;
}

/***** ::AFTER */

.progress-bar .active-progress-bar::before, .small-progress-bar .active-progress-bar::before {
    content: "";
    
    position: absolute;
    right: 0;
    bottom: 50%;
    transform: translate(0, 50%);
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: var(--main-text-color);
}

/********** APP-CONTENT GRID */

.grid-container {
    display: flex;
    justify-content: center;
}

.row {
    width: 100%;
    display: flex;
    gap: 10px;
    margin-top: 15px;
}

.col {
    width: calc(100% / 6);
    min-height: 150px;
    text-align: center;
}

/*********** MAIN */

#main-container {
    height: calc(100vh - var(--footer-height));
    background-color: #141922;
    display: flex;
}

/* nav left menu */

#nav-left-menu {
    min-width: var(--nav-menu-width);
    height: 100%;
    background-color: black;
    display: flex;
    flex-direction: column;
    font-size: var(--subtitle-font-size);
}

#nav-left-menu .big-logo {
    width: 70%;
    padding: var(--padding-nav-left-menu);
    margin-bottom: 10px;
}

#nav-left-menu .small-logo {
    width: 100%;
    padding: var(--padding-nav-left-menu);
    margin-bottom: 10px;
    display: none;
}

#nav-left-menu .menu-container {
    padding: var(--padding-nav-left-menu);
    color: var(--secondary-text-color);
    display: flex;
    align-items: center;
    border-left: 3px solid transparent;
}

#nav-left-menu .menu-container i {
    min-width: 30px;
}

#nav-left-menu .home-container {
    padding: var(--padding-nav-left-menu);
    color: var(--main-text-color);
    border-left: 3px solid #ADFF2F;
}

#nav-left-menu .playlist-nav-title {
    color: var(--main-text-color);
}

#nav-left-menu .playlist-container button {
    height: 30px;
    border: none;
    background-color: rgb(178, 178, 178);
    margin-right: 5px;
}

#nav-left-menu .playlist-name-container {
    height: 100%;
}

#nav-left-menu .install-app-container {
    color: var(--secondary-text-color);
    min-width: 210px;
    margin: 0 auto;
    padding: 10px 0;
    border-bottom: 1px solid var(--secondary-text-color);
}
#nav-left-menu .install-app-container svg {
    width: 20px;
    margin-right: 10px;
}

#nav-left-menu #grey-circle-profile {
    background-color: grey;
    border-radius: 50%;
    margin-right: 10px;
}

/* upgrade bar */

#upgrade-bar {
    min-width: calc(100% - var(--nav-menu-width));
    height: var(--upgrade-bar-height);
    background-color: rgba(0, 0, 0, 0.5);
    position: fixed;
    left: var(--nav-menu-width);
    text-align: right;
    line-height: var(--upgrade-bar-height);
    padding-right: 20px;
}

#upgrade-bar .upgrade-button {
    color: var(--main-text-color);
    background-color: transparent;
    border: 1px solid white;
    border-radius: 30px;
    padding: 7px 25px;
}

/* app content */

#app-content {
    height: calc(100vh - var(--upgrade-bar-height));
    width: 100%;
    padding: 15px;
    overflow: auto;
    color: white;
    padding-top: var(--upgrade-bar-height);
}

#app-content .nav-bar ul {
    list-style: none;
    display: flex;
    justify-content: center;
    padding: 15px;
    font-size: var(--subtitle-font-size);
    color: var(--secondary-text-color);
    flex-wrap: wrap;
}

#app-content .nav-bar li {
    margin-right: 20px;
    margin-bottom: 20px;
}

#app-content .nav-bar li:first-child {
    position: relative;
}

#app-content .nav-bar li:first-child::after {
    content: "";
    position: absolute;
    bottom: -5px;
    right: 25%;
    width: 50%;
    border-top: 3px solid #ADFF2F;
}

#app-content .row .col .song-img {
    margin-bottom: 15px;
    width: 100%;
} 

#app-content .row .col .cover {
    position: relative;
}

#app-content .row .col .playbutton-hover {
    display: none;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    background-color: rgba(0, 0, 0, 0.5);
    text-align: center;
}

#app-content .row .col .playbutton-hover i {
    position: absolute;
    top: 50%;
    transform: translate(-50%, -50%);
}

#app-content .row .col .song-title {
    color: var(--main-text-color);
    margin-bottom: 10px;
}

#app-content .row .col .song-artist {
    font-size: var(--subtitle-font-size);
    color: var(--secondary-text-color);
}

#app-content .for-you {
    font-size: var(--subtitle-font-size);
    color: var(--secondary-text-color);
    margin-bottom: 20px;
}

#app-content .row .col .artist-pic {
border-radius: 50%;
}

/*********** FOOTER */

#footer {
    height: var(--footer-height);
    background-color: #282828;
    display: flex;
    align-items: center;
    justify-content: space-between;
    z-index: 1;
    position: sticky;
    bottom: 0;
}

#footer .footer-layout {
    height: 100%;
    display: flex;
    align-items: center;
    padding-left: 15px;
}

/* song-preview section */

#footer .song-preview {
    min-width: var(--nav-menu-width);
}

#footer .song-preview img {
    height: 40px;
    width: 40px;
    margin-right: 10px;
}

#footer .song-preview .container-preview-name {
    flex-grow: 3;
}

#footer .song-preview .song-name-preview {
    color: var(--main-text-color);
    font-size: var(--subtitle-font-size);
}

#footer .song-preview .artist-name-preview {
    color: var(--secondary-text-color);
    font-size: 0.7rem;
}

#footer .icons-container {
    width: 40%;
    height: 100%;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
  }

#footer .song-preview i {
    color: var(--secondary-text-color);
    width: 20%;
    text-align: right;
}

/* player section */

#footer .player {
    width: 40%;
    height: 100%;
    color: var(--main-text-color);
}

#footer .player-button-container, 
#footer .progress-bar-container {
    width: 100%;
    height: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

#footer .player-button-container {
    padding-top: 20px;
}

#footer .player-button-container button {
    border: none;
    background-color: transparent;
    margin: 15px;
    color: var(--main-text-color);
}

#footer .progress-bar-container .current-sec, 
#footer .progress-bar-container .song-duration {
    width: 10%;
    font-size: 0.7rem;
    color: var(--main-text-color);
    text-align: center;
}

/* mixer section */

#footer .mixer {
    min-width: var(--nav-menu-width);
    padding: 0;
    text-align: center;
    color: var(--main-text-color);
}

#footer .mixer i {
    margin-right: 12px;
}

/*********** MEDIA QUERY */

@media screen and (max-width: 890px) {

    /* song grid */
    .row {
        flex-wrap: wrap;
    }

    .col {
        width: calc(100% / 4 - 10px);
    }

    /* footer */
    #footer .progress-bar {
        width: 60%;
    }

    #footer .mixer {
        min-width: 200px;
    }
}

@media screen and (max-width: 700px) {

    /* song grid */
    .col {
        width: calc(100% / 2 - 10px);
    }

    /* footer */
    #footer .icons-container {
        display: flex;
        flex-direction: column;
        height: 100%;
        justify-content: center;
        width: 20%;
    }

    #footer .song-preview {
        min-width: 200px;
    }

    #footer .progress-bar {
        width: 60%;
    }

    #footer .mixer {
        min-width: 150px;
    }
}

@media screen and (max-width: 600px) {
    /* nav left menu */
    #nav-left-menu {
        min-width: 40px;
    }

    #nav-left-menu .menu-container a {
        display: none;
    }

    #nav-left-menu .menu-container {
        padding: 5px;
    }

    #nav-left-menu .big-logo {
        display: none;
    }

    #nav-left-menu .small-logo {
        display: block;
    }

    #nav-left-menu .menu-container svg {
        display: block;
    }

    #nav-left-menu .home-container {
        border: none;
    }

    #nav-left-menu .playlist-container button {
        display: none;
    }

    #nav-left-menu .install-app-container {
        border: none;
        min-width: 40px;
    }

    #nav-left-menu .install-app-container svg {
        width: 100%;
        margin: 0;
    }

    #nav-left-menu #grey-circle-profile {
        margin: 0;
    }

    /* upgrade bar */
    #upgrade-bar {
        min-width: calc(100% - 40px);
        left: 40px;
    }

    /* footer */
    #footer .song-preview {
        min-width: 150px;
    }
}

